# Otel-Libraries

./: .gitignore  CLAUDE.md  GETTING-STARTED.md  README.md
azure-alert-migration/: AGENTS.md  aks_alloy.alloy  alloy-aks-azure-lgtm-guide.md  alloy-aks-logging-guide.md
azure-alert-migration/dashboard-templates/: README.md  build_dashboard_templates.py
azure-alert-migration/dashboard-templates/dashboards/: azure-cosmos-db.json  azure-databricks.json  azure-event-grid.json  azure-event-hubs.json  azure-kubernetes.json  azure-logic-apps-standard.json  azure-logic-apps.json  azure-redis-cache.json  azure-service-bus.json  azure-sql-database.json  azure-sql-managed-instance.json  azure-storage-accounts.json  azure-storage-blobs.json  azure-storage-files.json  (+3 more)
demo/: .gitignore  README.md  docker-compose.yml
demo/alloy/: config.alloy
demo/apps/java/: pom.xml  (+1 more)
demo/collector/: config.yaml
demo/loki/: config.yaml
demo/mimir/: mimir.yaml
demo/prometheus/: prometheus.yml
demo/scripts/: build-libs.sh
demo/tempo/: config.yaml
docs/: USING-THE-LIBRARIES.md
libraries/: README.md
libraries/dotnet/: README.md  REQUIREMENTS.md  USAGE.md
libraries/java/: README.md  REQUIREMENTS.md  USAGE.md
libraries/nodejs/: README.md  REQUIREMENTS.md  USAGE.md
libraries/python/: README.md  REQUIREMENTS.md  USAGE.md
libraries/python/traces/: README.md  pyproject.toml  requirements.txt
libraries/python/traces/src/cloudops_otel_traces/: __init__.py  tracer.py
libraries/python/traces/src/otel_traces/: __init__.py  tracer.py
libraries/python/traces/tests/: test_tracer.py
(+166 files in other folders)
