#This file defines pyproject package settings for CloudOps.
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cloudops-otel-traces"
version = "0.1.0"
description = "CloudOps tracing helper for Python services."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "CloudOps" }
]
keywords = ["cloudops", "opentelemetry", "traces"]
dependencies = [
  "opentelemetry-api==1.41.0",
  "opentelemetry-sdk==1.41.0",
  "opentelemetry-exporter-otlp-proto-http==1.41.0",
  "opentelemetry-instrumentation-flask==0.62b0",
  "opentelemetry-instrumentation-requests==0.62b0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cloudops_otel_traces"]
